# FastDeploy

./: CMakeLists.txt  FastDeploy.cmake.in
cmake/: paddle_inference.cmake
examples/vision/detection/yolov5/cpp/: CMakeLists.txt  infer.cc
examples/vision/segmentation/paddleseg/cpp/: infer.cc
examples/vision/segmentation/paddleseg/python/serving/: client.py  server.py
fastdeploy/: runtime.cc
fastdeploy/backends/paddle/: paddle_backend.cc  paddle_backend.h
python/scripts/: build_gpu.sh
